[package]
name = "nosleep"
version = "0.1.0"
authors = ["Yolan Romailler <yromailler@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
chrono = "0.4.19"

[[bin]]
name = "nosleep"
path = "main.rs"
